# lsmp-agent-template

./: .env.example  .forceignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TEMPLATE_GUIDE.md  live.py  pyproject.toml  sfdx-project.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.halcon/: HALCON.md
.halcon/memory/: MEMORY.md  errors.md
adapters/inbound/: api_adapter.py  cli_adapter.py  event_listener_adapter.py
adapters/outbound/: event_publisher_adapter.py  postgres_account_repository.py  salesforce_account_repository.py
agents/: requirements.txt
agents/_shared/: __init__.py  base_agent.py  context_protocol.py  schemas.py
agents/data-validation-agent/: agent.py  tools.py
agents/debugging-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
agents/documentation-agent/: agent.py
agents/execution-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
agents/migration-agent/: agent.py  tools.py
agents/orchestrator/: multi_agent_orchestrator.py
agents/orchestrator-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
agents/planning-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
agents/security-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
agents/security-audit-agent/: agent.py
agents/validation-agent/: agent.md  agent.py  config.yaml  prompt.txt  schema.json
analysis/: agent_issues.md  context_problems.md
application/commands/: migration_commands.py
application/dto/: migration_dto.py
application/queries/: migration_queries.py
application/services/: migration_service.py  notification_service.py
application/use_cases/: generate_migration_report.py  pause_migration.py  start_migration.py  validate_migration_data.py
architecture/: component_diagram.md  container_diagram.md  event_flows.md  integration_patterns.md  system_context.md
architecture/decisions/: ADR-001-salesforce-as-target-platform.md  ADR-002-hexagonal-architecture.md  ADR-003-event-driven-architecture.md  ADR-004-zero-trust-security-model.md  ADR-005-data-transformation-strategy.md  ADR-006-multi-tenant-deployment.md  ADR-007-ai-agent-orchestration.md
ci-cd/azure-devops/: azure-pipelines.yml  migration-pipeline.yml
ci-cd/gitlab-ci/: .gitlab-ci.yml
ci-cd/scripts/: deploy.sh  rollback.sh
config/: agents.yaml  app_config.yaml  context.yaml  feature_flags.yaml  halcon.yaml  mcp_registry.yaml  settings.py  skills.yaml  tools.yaml
config/environments/: dev.env.example  prod.env.example  staging.env.example
context/: project-context.yaml  restricted-context.yaml  runtime-context.yaml
context-servers/documentation-context/: config.json  server.py
context-servers/project-context/: config.json  server.py
context-servers/runtime-context/: config.json  server.py
context-servers/security-context/: config.json  server.py
dashboard/: app.py
data/mappings/: account_field_mapping.json  contact_field_mapping.json
data/samples/: legacy_accounts_sample.csv  legacy_contacts_sample.csv
data/schemas/: legacy_account_schema.json  salesforce_account_schema.json
data/seed/: reference_data.json
demo/: __init__.py  mock_sf_server.py  run_demo_pipeline.py  seed_legacy_db.py
docs/: architecture.md  data_mapping.md  deployment_strategy.md  governance.md  migration_strategy.md  security_model.md
docs/api/: openapi.yaml
docs/architecture/: lsmp-architecture.drawio
docs/runbooks/: incident_response.md  migration_runbook.md
domain/entities/: account.py  contact.py  migration_job.py
domain/events/: migration_events.py
domain/exceptions/: domain_exceptions.py
domain/repositories/: account_repository.py  migration_repository.py
domain/value_objects/: address.py  email.py  salesforce_id.py
halcon/: agent-routing.yaml  orchestration.yaml  permissions.yaml  workflows.yaml
halcon/workflows/: migration-workflow.yaml  security-audit-workflow.yaml  validation-workflow.yaml
infrastructure/docker/: Dockerfile.api  Dockerfile.migration  docker-compose.test.yml  docker-compose.yml
infrastructure/kubernetes/: namespaces.yaml
infrastructure/sql/: 01_legacy_schema.sql  02_migration_tracking.sql
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
integrations/: requirements.txt
integrations/api_gateway/: main.py  middleware.py
integrations/event_consumers/: kafka_consumer.py  salesforce_platform_events.py
integrations/message_queues/: event_publisher.py  queue_processor.py
integrations/rest_clients/: base_client.py  legacy_system_client.py  salesforce_client.py
integrations/schemas/: account_schema.py  migration_event_schema.py
mcp-servers/api-server/: policies.yaml  server.yaml
mcp-servers/documentation-server/: policies.yaml  server.yaml
mcp-servers/filesystem-server/: policies.yaml  server.yaml
mcp-servers/memory-server/: policies.yaml  server.yaml
migration/: orchestrator.py  requirements.txt
migration/config/: migration_config.yaml
migration/data_transformations/: account_transformer.py  contact_transformer.py  transformation_rules.py
migration/legacy_extractors/: account_extractor.py  base_extractor.py  contact_extractor.py
migration/loaders/: base_loader.py  salesforce_bulk_loader.py
migration/validation/: data_validator.py  reconciliation_report.py
monitoring/: agent_observability.py  anomaly_detector.py  mcp_access_log.py  structured_audit_log.py
monitoring/alerts/: alert_rules.yaml  alertmanager_config.yaml
monitoring/dashboards/: migration_dashboard.json  (+1 more)
salesforce/: package.json
scripts/: backup_legacy_data.sh  cleanup_migration_logs.sh  deploy_to_salesforce.sh  generate_migration_report.py  run_migration.sh  setup_dev_environment.sh  setup_environment.sh  setup_salesforce_sandbox.py  validate_salesforce_connection.py  validate_system.py
security/: agent_security_model.md  audit_config.yaml  policies.yaml  redaction_rules.yaml  threat_model.md
tests/: conftest.py  pytest.ini
validation/: __init__.py  layer.py  rules.py  schemas.py
(+157 files in other folders)
