[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s-agent"
version = "1.0.0"
description = "Enterprise-grade Legacy to Salesforce migration agent following Clean Architecture and DDD principles."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Migration Team", email = "migration-team@yourcompany.com" },
]
keywords = ["salesforce", "migration", "etl", "ddd", "clean-architecture", "crm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

dependencies = [
    # ---------------------------------------------------------------------------
    # Web Framework
    # ---------------------------------------------------------------------------
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<1.0",
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.2.0",

    # ---------------------------------------------------------------------------
    # Database (async PostgreSQL)
    # ---------------------------------------------------------------------------
    "sqlalchemy[asyncio]>=2.0.29,<3.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # ---------------------------------------------------------------------------
    # Salesforce
    # ---------------------------------------------------------------------------
    "simple-salesforce>=1.12.5",

    # ---------------------------------------------------------------------------
    # CLI
    # ---------------------------------------------------------------------------
    "click>=8.1.7",
    "rich>=13.7.0",

    # ---------------------------------------------------------------------------
    # Async utilities
    # ---------------------------------------------------------------------------
    "anyio[asyncio]>=4.3.0",
    "aiohttp>=3.9.5",
    "httpx>=0.27.0",

    # ---------------------------------------------------------------------------
    # Observability
    # ---------------------------------------------------------------------------
    "structlog>=24.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20.0",

    # ---------------------------------------------------------------------------
    # Data validation
    # ---------------------------------------------------------------------------
    "jsonschema>=4.22.0",
    "email-validator>=2.1.1",

    # ---------------------------------------------------------------------------
    # Serialisation / data utilities
    # ---------------------------------------------------------------------------
    "orjson>=3.10.0",
    "python-dateutil>=2.9.0",

    # ---------------------------------------------------------------------------
    # Environment / config
    # ---------------------------------------------------------------------------
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",

    # ---------------------------------------------------------------------------
    # Cloud storage (optional, soft dependencies – mark as optional below)
    # ---------------------------------------------------------------------------
    "boto3>=1.34.0",
]

[project.optional-dependencies]
kafka = [
    "confluent-kafka>=2.4.0",
]
azure = [
    "azure-servicebus>=7.12.0",
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.16.0",
]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.103.0",
    "faker>=25.0.0",

    # Code quality
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "black>=24.4.2",
    "isort>=5.13.2",

    # Type stubs
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.9.0",
    "sqlalchemy[mypy]>=2.0.29",

    # Security scanning
    "bandit[toml]>=1.7.8",
    "safety>=3.2.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",

    # Development utilities
    "ipython>=8.24.0",
    "ipdb>=0.13.13",
    "watchdog>=4.0.0",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "faker>=25.0.0",
    "hypothesis>=6.103.0",
]

[project.scripts]
s-agent = "adapters.inbound.cli_adapter:cli"
migration-validate = "scripts.validate_salesforce_connection:main"
migration-report = "scripts.generate_migration_report:main"

[project.urls]
Homepage = "https://github.com/yourorg/s-agent"
Documentation = "https://yourorg.github.io/s-agent"
Repository = "https://github.com/yourorg/s-agent.git"
Issues = "https://github.com/yourorg/s-agent/issues"
Changelog = "https://github.com/yourorg/s-agent/CHANGELOG.md"

# =============================================================================
# Hatch build configuration
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/domain",
    "/application",
    "/adapters",
    "/data",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
    "/.env.example",
]
exclude = [
    "/.venv",
    "/__pycache__",
    "/.git",
    "/logs",
    "/reports",
    "/data/backups",
    "/.env",
]

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "adapters"]

# =============================================================================
# Ruff (linter + formatter)
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["domain", "application", "adapters", "scripts"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "ANN",  # flake8-annotations (type hints)
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "S101",   # Use of assert (acceptable in tests)
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN401", # Dynamically typed expressions (Any)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["ANN", "S603", "S607"]
"adapters/inbound/cli_adapter.py" = ["ANN", "T201"]
"tests/**/*.py" = ["ANN", "S", "PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# =============================================================================
# Black (formatter – used alongside ruff format)
# =============================================================================

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | __pycache__
  | alembic
)/
'''

# =============================================================================
# isort
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["domain", "application", "adapters"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "simple_salesforce", "click"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# mypy
# =============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_subclassing_any = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "simple_salesforce.*",
    "confluent_kafka.*",
    "azure.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# =============================================================================
# pytest
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=domain",
    "--cov=application",
    "--cov=adapters",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: fast, isolated unit tests (no I/O)",
    "integration: tests requiring external services (DB, Salesforce)",
    "e2e: end-to-end tests against live systems",
    "slow: tests that take more than 5 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["domain", "application", "adapters"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "pass$",
    "@(abc\\.)?abstractmethod",
]

# =============================================================================
# Bandit (security linting)
# =============================================================================

[tool.bandit]
targets = ["domain", "application", "adapters"]
skips = ["B101", "B601"]
exclude_dirs = [".venv", "tests", "__pycache__"]
